<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GPS App</string>
    <string name="get_current_location">Get Current Location</string>
    <string name="latitude">Latitude</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="longitude">Longitude</string>
    <string name="normal_map">Normal Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="MAP_API">AIzaSyBxFT560J4BukMm3tdIQZzx5BbCgtfY08o</string>
    <string name="_15_0">15.0</string>
    <string name="_dollar">$</string>
    <string name="_0_reviews">0</string>
    <string name="complete_lesson_5">Complete Lesson:</string>
    <string name="verified">Verified</string>
    <string name="qa">QA</string>
    <string name="_5">5</string>
    <string name="reviews">Reviews</string>
</resources>